rss, fix padding on mobile, readjusted ui and imgs, fixed cache-control [skip ci]

--- a/assets/main.css
+++ b/assets/main.css
@@ -2,7 +2,7 @@
 	--color-bg: white;
 	--color-text: black;
 	--color-primary: #335cff;
-	--color-gray: #808080;
+	--color-gray: #707070;
 	--color-light-gray: #f1f1f1;
 	--color-note: rgb(135, 135, 135);
 }
@@ -28,17 +28,16 @@ footer {
 }
 
 .wrapper {
-	max-width: 800px;
+	max-width: 600px;
 	width: 100%;
 	margin: 0 auto;
 }
 
-nav h1 a::after {
+.site-logo::after {
 	content: 'números números números';
 }
 
-h1 {
-	color: var(--color-text);
+.site-logo {
 	font-weight: 400;
 	font-size: 32px;
 	margin: 0;
@@ -49,12 +48,8 @@ nav {
 	justify-content: space-between;
 	align-items: center;
 	margin: 35px 0;
-}
-
-nav h1 a {
-	display: inline-block;
-	text-decoration: none;
-	color: inherit;
+	padding-bottom: 35px;
+	border-bottom: solid black 2px;
 }
 
 a {
@@ -66,41 +61,113 @@ a {
 }
 
 .landing-list {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	display: flex;
+	flex-direction: column;
 	gap: 35px;
 	padding: 0;
 	margin: 0;
 	width: 100%;
+	padding-bottom: 35px;
 }
 
 .landing-item {
 	list-style: none;
 }
 
+.landing-item:nth-of-type(3n + 4) {
+	padding-bottom: 35px;
+	border-bottom: solid black 2px;
+}
+
+.landing-item-featured {
+	list-style: none;
+	padding: 0 10px 35px 10px;
+	border-bottom: solid black 2px;
+}
+
 .landing-link {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: flex-start;
-	gap: 10px;
+	gap: 20px;
 	padding: 0;
 	margin: 0;
-	background: transparent;
-	border-radius: 12px;
 	font-size: 16px;
 	text-decoration: none;
+	height: 100%;
+	width: 100%;
+}
+
+.landing-link-featured {
+	display: flex;
+	flex-direction: row;
+	align-items: top;
+	justify-content: center;
+	gap: 20px;
+	padding: 0;
+	margin: 0;
+	font-size: 16px;
+	text-decoration: none;
+	height: 100%;
+	width: 100%;
 }
 
 .landing-thumb {
-	max-width: 100%;
+	width: 100px;
 	height: auto;
 	border-radius: 10px;
 }
 
+.landing-thumb-featured {
+	width: 300px;
+	height: 150px;
+	border-radius: 10px;
+	object-fit: cover;
+	object-position: center;
+}
+
 .landing-title {
 	margin: 0;
+	width: 100%;
 	font-weight: 400;
-	font-size: 18px;
+	font-size: 19px;
+}
+
+.landing-title-featured {
+	margin: 0;
+	font-weight: 400;
+	font-size: 22px;
+	text-align: center;
+}
+
+.landing-item-text {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 20px;
+}
+
+.landing-item-text-featured {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	width: 300px;
+}
+
+.landing-item-meta {
+	display: flex;
+	gap: 15px;
+	align-items: center;
+}
+
+.landing-item-meta-featured {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	align-items: center;
 }
 
 p {
@@ -134,19 +201,21 @@ a.blue {
 	display: inline;
 }
 
-.article-title {
+h1.article-title {
 	font-size: 24px;
 	font-weight: 400;
 	margin: 20px 0;
 }
 
-h3 {
+h2 {
 	font-size: 20px;
 	font-weight: 400;
 	margin: 20px 0 0 0;
+	padding-bottom: 10px;
+	border-bottom: solid black 2px;
 }
 
-h4 {
+h3 {
 	font-size: 16px;
 	font-weight: 600;
 	margin: 10px 0 0 0;
@@ -160,6 +229,7 @@ h4 {
 
 .article-image {
 	width: 100%;
+	height: auto;
 	border-radius: 15px;
 	margin-bottom: 20px;
 }
@@ -174,13 +244,12 @@ article {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	align-items: left;
-	gap: 20px;
+	gap: 15px;
 }
 article ul {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 10px;
 	padding: 0;
 	margin: 0;
 }
@@ -237,14 +306,13 @@ ul.notes {
 .load-more {
 	background-color: var(--color-primary);
 	border-radius: 10px;
-	padding: 10px;
 	height: 40px;
-	width: 125px;
+	width: 100px;
 	box-sizing: border-box;
 	width: fit-content;
 	display: flex;
 	align-items: center;
-	margin: 50px auto 0 auto;
+	margin: 35px auto 0 auto;
 }
 .load-more a {
 	color: var(--color-bg);
@@ -255,7 +323,7 @@ ul.notes {
 	align-items: center;
 	justify-content: center;
 	height: 40px;
-	width: 125px;
+	width: 100px;
 	box-sizing: border-box;
 }
 
@@ -265,31 +333,78 @@ ul.notes {
 }
 
 @media (max-width: 700px) {
-	.landing-title {
-		font-size: 16px;
+	.landing-title-featured {
+		font-size: 19px;
 	}
 }
 
 @media (max-width: 600px) {
 	body {
-		padding: 0 18px;
+		padding: 0 15px;
 	}
+
+	.landing-item {
+		padding-bottom: 0px;
+	}
+
+	.landing-list {
+		gap: 20px;
+		padding-bottom: 20px;
+	}
+
+	.landing-item-featured {
+		padding-bottom: 20px;
+	}
+
+	.landing-item-text {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 10px;
+	}
+
+	.landing-item-text-featured {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 10px;
+		width: 100%;
+	}
+
+	.landing-item-meta-featured {
+		gap: 10px;
+	}
+
+	.landing-thumb-featured {
+		height: 100%;
+		width: 100px;
+	}
+
+	.landing-item:nth-of-type(3n + 4) {
+		padding-bottom: 20px;
+	}
+
 	.wrapper {
 		max-width: 400px;
 	}
-	nav h1 a::after {
+	.site-logo::after {
 		content: 'números*3';
 	}
-	h1 {
+	.site-logo {
 		font-size: 28px;
 	}
+
 	.article-title {
 		font-size: 22px;
 	}
 
 	nav {
 		margin: 20px 0;
+		padding-bottom: 20px;
 	}
+
 	.author-link-icon {
 		padding-left: 5px;
 	}
@@ -298,5 +413,50 @@ ul.notes {
 	}
 	footer .cc a {
 		font-size: 10px;
+	}
+	.load-more {
+		margin-top: 0px;
+	}
+}
+
+@media (max-width: 500px) {
+	.landing-list {
+		gap: 40px;
+		padding-bottom: 40px;
+	}
+	.landing-link,
+	.landing-link-featured,
+	.landing-item-text,
+	.landing-item-text-featured,
+	.landing-item-meta-featured {
+		flex-direction: column;
+		gap: 10px;
+		justify-content: flex-start;
+		align-items: flex-start;
+		width: 100%;
+		text-align: left;
+	}
+
+	.landing-thumb,
+	.landing-thumb-featured {
+		width: 100%;
+	}
+
+	.landing-item:nth-of-type(3n + 4) {
+		padding-bottom: 40px;
+	}
+
+	.landing-item-featured {
+		align-items: flex-start;
+		justify-content: flex-start;
+		padding: 0 0 40px 0;
+	}
+
+	.landing-title-featured {
+		text-align: left;
+	}
+
+	.landing-item-meta-featured p {
+		text-align: left;
 	}
 }
